--- a/runflat/runflat.vcxproj
+++ b/runflat/runflat.vcxproj
@@ -96,7 +96,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)lib_$(Configuration)_$(PlatformTarget);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>bochs\cpu.lib;bochs\disasm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>winmm.lib;comctl32.lib;ws2_32.lib;iphlpapi.lib;bochs\avx.lib;bochs\bx_debug.lib;bochs\cpu.lib;bochs\cpudb.lib;bochs\disasm.lib;bochs\fpu.lib;bochs\gui.lib;bochs\iodev.lib;bochs\iodev_display.lib;bochs\iodev_hdimage.lib;bochs\iodev_network.lib;bochs\iodev_sound.lib;bochs\iodev_usb.lib;bochs\memory.lib;bochs\stubs.lib;bochs\config.obj;bochs\crc.obj;bochs\load32bitOShack.obj;bochs\logio.obj;bochs\main.obj;bochs\osdep.obj;bochs\pc_system.obj;bochs\plugin.obj;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>libcmtd</IgnoreSpecificDefaultLibraries>
     </Link>
   </ItemDefinitionGroup>
@@ -114,7 +114,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)lib_$(Configuration)_$(PlatformTarget);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>bochs\cpu.lib;bochs\disasm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>winmm.lib;comctl32.lib;ws2_32.lib;iphlpapi.lib;bochs\avx.lib;bochs\bx_debug.lib;bochs\cpu.lib;bochs\cpudb.lib;bochs\disasm.lib;bochs\fpu.lib;bochs\gui.lib;bochs\iodev.lib;bochs\iodev_display.lib;bochs\iodev_hdimage.lib;bochs\iodev_network.lib;bochs\iodev_sound.lib;bochs\iodev_usb.lib;bochs\memory.lib;bochs\stubs.lib;bochs\config.obj;bochs\crc.obj;bochs\load32bitOShack.obj;bochs\logio.obj;bochs\main.obj;bochs\osdep.obj;bochs\pc_system.obj;bochs\plugin.obj;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>libcmtd</IgnoreSpecificDefaultLibraries>
     </Link>
   </ItemDefinitionGroup>
@@ -136,7 +136,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)lib_$(Configuration)_$(PlatformTarget);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>bochs\cpu.lib;bochs\disasm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>winmm.lib;comctl32.lib;ws2_32.lib;iphlpapi.lib;bochs\avx.lib;bochs\bx_debug.lib;bochs\cpu.lib;bochs\cpudb.lib;bochs\disasm.lib;bochs\fpu.lib;bochs\gui.lib;bochs\iodev.lib;bochs\iodev_display.lib;bochs\iodev_hdimage.lib;bochs\iodev_network.lib;bochs\iodev_sound.lib;bochs\iodev_usb.lib;bochs\memory.lib;bochs\stubs.lib;bochs\config.obj;bochs\crc.obj;bochs\load32bitOShack.obj;bochs\logio.obj;bochs\main.obj;bochs\osdep.obj;bochs\pc_system.obj;bochs\plugin.obj;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>libcmt</IgnoreSpecificDefaultLibraries>
     </Link>
   </ItemDefinitionGroup>
@@ -158,7 +158,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)lib_$(Configuration)_$(PlatformTarget);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>bochs\cpu.lib;bochs\disasm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>winmm.lib;comctl32.lib;ws2_32.lib;iphlpapi.lib;bochs\avx.lib;bochs\bx_debug.lib;bochs\cpu.lib;bochs\cpudb.lib;bochs\disasm.lib;bochs\fpu.lib;bochs\gui.lib;bochs\iodev.lib;bochs\iodev_display.lib;bochs\iodev_hdimage.lib;bochs\iodev_network.lib;bochs\iodev_sound.lib;bochs\iodev_usb.lib;bochs\memory.lib;bochs\stubs.lib;bochs\config.obj;bochs\crc.obj;bochs\load32bitOShack.obj;bochs\logio.obj;bochs\main.obj;bochs\osdep.obj;bochs\pc_system.obj;bochs\plugin.obj;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>libcmt</IgnoreSpecificDefaultLibraries>
     </Link>
   </ItemDefinitionGroup>
