--- a/runflat/runflat.vcxproj
+++ b/runflat/runflat.vcxproj
@@ -164,17 +164,25 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\pereader\flatbinary.hpp" />
+    <ClInclude Include="assemblycommand.hpp" />
+    <ClInclude Include="cpu.hpp" />
+    <ClInclude Include="register.hpp" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="x64_sub.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\pereader\flatbinary.cpp" />
+    <ClCompile Include="assemblycommand.cpp" />
+    <ClCompile Include="cpu.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="register.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="x64_sub.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
