--- a/pereader/pereader.vcxproj
+++ b/pereader/pereader.vcxproj
@@ -148,6 +148,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="flatbinary.hpp" />
+    <ClInclude Include="peexport.hpp" />
     <ClInclude Include="utils.hpp" />
     <ClInclude Include="dosheader.hpp" />
     <ClInclude Include="pe.hpp" />
@@ -162,6 +163,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="flatbinary.cpp" />
+    <ClCompile Include="peexport.cpp" />
     <ClCompile Include="utils.cpp" />
     <ClCompile Include="dosheader.cpp" />
     <ClCompile Include="main.cpp" />
