--- a/pereader/pereader.vcxproj.filters
+++ b/pereader/pereader.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="flatbinary.hpp">
       <Filter>flat</Filter>
     </ClInclude>
+    <ClInclude Include="peexport.hpp">
+      <Filter>pe</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp" />
@@ -67,6 +70,9 @@
     <ClCompile Include="utils.cpp" />
     <ClCompile Include="flatbinary.cpp">
       <Filter>flat</Filter>
+    </ClCompile>
+    <ClCompile Include="peexport.cpp">
+      <Filter>pe</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
