--- a/execflat/execflat.vcxproj.filters
+++ b/execflat/execflat.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClInclude Include="apicrtstate.hpp">
       <Filter>importstates</Filter>
     </ClInclude>
+    <ClInclude Include="kernel32state.hpp">
+      <Filter>importstates</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
@@ -52,6 +55,9 @@
       <Filter>importstates</Filter>
     </ClCompile>
     <ClCompile Include="apicrtstate.cpp">
+      <Filter>importstates</Filter>
+    </ClCompile>
+    <ClCompile Include="kernel32state.cpp">
       <Filter>importstates</Filter>
     </ClCompile>
   </ItemGroup>
